--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ button{
 }
 
 .list-tasks > .task-input {
-  width: 226px
+  width: 226px;
 }
 
 .button.delete .delete-button-img {
@@ -155,18 +155,18 @@ button{
 
 /* Completed */
 #completed-tasks .list-tasks-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list-tasks .task-input {
-  display: none
+  display: none;
 }
 
 .list-tasks.edit-mode .task-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .list-tasks.edit-mode .list-tasks-label {
